--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "lucide-react": "^0.562.0",
-    "react-router-dom": "^7.11.0",
-    "@google/genai": "^1.34.0",
+    "lucide-react": "0.344.0",
+    "react-router-dom": "6.22.3",
+    "@google/genai": "0.1.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3"
   },
